Documentation/typo3fluid/fluid/2.5.4/If.rst
.. include:: ../../../Includes.txt

==
if
==


This view helper implements an if/else condition.

**Conditions:**

As a condition is a boolean value, you can just use a boolean argument.
Alternatively, you can write a boolean expression there.
Boolean expressions have the following form:
XX Comparator YY
Comparator is one of: ==, !=, <, <=, >, >= and %
The % operator converts the result of the % operation to boolean.

XX and YY can be one of:
- number
- Object Accessor
- Array
- a ViewHelper
Note: Strings at XX/YY are NOT allowed, however, for the time being,
a string comparison can be achieved with comparing arrays (see example
below).
::

  <f:if condition="{rank} > 100">
    Will be shown if rank is > 100
  </f:if>
  <f:if condition="{rank} % 2">
    Will be shown if rank % 2 != 0.
  </f:if>
  <f:if condition="{rank} == {k:bar()}">
    Checks if rank is equal to the result of the ViewHelper "k:bar"
  </f:if>
  <f:if condition="{0: foo.bar} == {0: 'stringToCompare'}">
    Will result true if {foo.bar}'s represented value equals 'stringToCompare'.
  </f:if>

--------
Examples
--------

**Simple if**

::

  <f:if condition="somecondition">
    This is being shown in case the condition matches
  </f:if>

<output>
Everything inside the <f:if> tag is being displayed if the condition evaluates to TRUE.
</output>

**If/then/else**

::

  <f:if condition="somecondition">
    <f:then>
      This is being shown in case the condition matches.
    </f:then>
    <f:else>
      This is being displayed in case the condition evaluates to FALSE.
    </f:else>
  </f:if>

Everything inside the "then" tag is displayed if the condition evaluates to TRUE.
Otherwise, everything inside the "else"-tag is displayed.

**Inline if**

::

  {f:if(condition: someCondition, then: 'condition is met', else: 'condition is not met')}

The value of the "then" attribute is displayed if the condition evaluates to TRUE.
Otherwise, everything the value of the "else"-attribute is displayed.


Arguments
=========


then (anySimpleType)
--------------------


Value to be returned if the condition if met.

else (anySimpleType)
--------------------


Value to be returned if the condition if not met.

condition (boolean)
-------------------


Default: false

Condition expression conforming to Fluid boolean rules
